clusters/elastic/kibana-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kibana-sample-kb-http
  namespace: rhpam-monitoring
  labels:
    common.k8s.elastic.co/type: kibana
    kibana.k8s.elastic.co/name: kibana-sample
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: kibana-sample-kb-http
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
